.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:14:04 **** Incremental Build of configuration Debug for project cv05uart ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "cv05uart.elf" @"objects.list"   -mcpu=cortex-m0 -T"C:\Temp\MKSVanek\MKS\cv05uart\STM32F030R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="cv05uart.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: cv05uart.elf
 
arm-none-eabi-size  cv05uart.elf 
arm-none-eabi-objdump -h -S cv05uart.elf  > "cv05uart.list"
   text	   data	    bss	    dec	    hex	filename
  18628	    104	   2520	  21252	   5304	cv05uart.elf
Finished building: default.size.stdout
 
Finished building: cv05uart.list
 
10:14:09 **** Incremental Build of configuration Debug for project cv05uart ****
make -j4 all 
arm-none-eabi-size  cv05uart.elf 
   text	   data	    bss	    dec	    hex	filename
  18628	    104	   2520	  21252	   5304	cv05uart.elf
Finished building: default.size.stdout
 
10:21:26 **** Incremental Build of configuration Debug for project cv05uart ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "cv05uart.elf" @"objects.list"   -mcpu=cortex-m0 -T"C:\Temp\MKSVanek\MKS\cv05uart\STM32F030R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="cv05uart.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: cv05uart.elf
 
arm-none-eabi-size  cv05uart.elf 
arm-none-eabi-objdump -h -S cv05uart.elf  > "cv05uart.list"
   text	   data	    bss	    dec	    hex	filename
  18628	    104	   2520	  21252	   5304	cv05uart.elf
Finished building: default.size.stdout
 
Finished building: cv05uart.list
 
10:25:57 **** Incremental Build of configuration Debug for project cv05uart ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'uart_process_command':
../Core/Src/main.c:164:40: error: 'value1' undeclared (first use in this function); did you mean 'value'?
  164 |                         printf("%02X ",value1[i]);
      |                                        ^~~~~~
      |                                        value
../Core/Src/main.c:164:40: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.
10:26:07 **** Incremental Build of configuration Debug for project cv05uart ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "cv05uart.elf" @"objects.list"   -mcpu=cortex-m0 -T"C:\Temp\MKSVanek\MKS\cv05uart\STM32F030R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="cv05uart.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: cv05uart.elf
 
arm-none-eabi-size  cv05uart.elf 
arm-none-eabi-objdump -h -S cv05uart.elf  > "cv05uart.list"
   text	   data	    bss	    dec	    hex	filename
  18656	    104	   2520	  21280	   5320	cv05uart.elf
Finished building: default.size.stdout
 
Finished building: cv05uart.list
 
10:28:10 **** Incremental Build of configuration Debug for project cv05uart ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "cv05uart.elf" @"objects.list"   -mcpu=cortex-m0 -T"C:\Temp\MKSVanek\MKS\cv05uart\STM32F030R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="cv05uart.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: cv05uart.elf
 
arm-none-eabi-size  cv05uart.elf 
arm-none-eabi-objdump -h -S cv05uart.elf  > "cv05uart.list"
   text	   data	    bss	    dec	    hex	filename
  18648	    104	   2520	  21272	   5318	cv05uart.elf
Finished building: default.size.stdout
 
Finished building: cv05uart.list
 
10:28:30 **** Incremental Build of configuration Debug for project cv05uart ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "cv05uart.elf" @"objects.list"   -mcpu=cortex-m0 -T"C:\Temp\MKSVanek\MKS\cv05uart\STM32F030R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="cv05uart.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: cv05uart.elf
 
arm-none-eabi-size  cv05uart.elf 
arm-none-eabi-objdump -h -S cv05uart.elf  > "cv05uart.list"
   text	   data	    bss	    dec	    hex	filename
  18656	    104	   2520	  21280	   5320	cv05uart.elf
Finished building: default.size.stdout
 
Finished building: cv05uart.list
 
10:29:09 **** Incremental Build of configuration Debug for project cv05uart ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'uart_process_command':
../Core/Src/main.c:163:32: warning: too many arguments for format [-Wformat-extra-args]
  163 |                         printf("%02X ",i,value[i]);
      |                                ^~~~~~~
arm-none-eabi-gcc -o "cv05uart.elf" @"objects.list"   -mcpu=cortex-m0 -T"C:\Temp\MKSVanek\MKS\cv05uart\STM32F030R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="cv05uart.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: cv05uart.elf
 
arm-none-eabi-size  cv05uart.elf 
arm-none-eabi-objdump -h -S cv05uart.elf  > "cv05uart.list"
   text	   data	    bss	    dec	    hex	filename
  18656	    104	   2520	  21280	   5320	cv05uart.elf
Finished building: default.size.stdout
 
Finished building: cv05uart.list
 
10:30:14 **** Incremental Build of configuration Debug for project cv05uart ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "cv05uart.elf" @"objects.list"   -mcpu=cortex-m0 -T"C:\Temp\MKSVanek\MKS\cv05uart\STM32F030R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="cv05uart.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: cv05uart.elf
 
arm-none-eabi-size  cv05uart.elf 
arm-none-eabi-objdump -h -S cv05uart.elf  > "cv05uart.list"
   text	   data	    bss	    dec	    hex	filename
  18660	    104	   2520	  21284	   5324	cv05uart.elf
Finished building: default.size.stdout
 
Finished building: cv05uart.list
 
